mergeFail test completed and merge task finally :) completed. For now, I think, I will go thrue tasks much more faster