@@ -63,17 +63,26 @@ public class ListTasksImpl implements ListTasks {
 
     @Override
     public List<Long> merge(List<Integer> first, List<Long> second, List<String> third) {
-
-        List<Long> newList = new ArrayList<Long>();
-        List<Long> long1 = first.stream()
-                .mapToLong(Integer::longValue)
-                .boxed().toList();
-        List<Long> long3 = third.stream()
-                .map(Long::parseLong)
-                .collect(Collectors.toList());
-        newList.addAll(long1);
-        newList.addAll(second);
-        newList.addAll(long3);
+        List<Long> newList = null;
+        try {
+            newList = new ArrayList<Long>();
+            List<Long> long1 = first.stream()
+                    .mapToLong(Integer::longValue)
+                    .boxed().toList();
+            List<Long> long3 = third.stream()
+                    .map(Long::parseLong)
+                    .collect(Collectors.toList());
+            newList.addAll(long1);
+            newList.addAll(second);
+            newList.addAll(long3);
+        } catch (IllegalArgumentException e) {
+            if (third.contains(null) || first.contains(null) || second.contains(null))
+                throw new NullPointerException("NullPointerException");
+            else
+                throw new  IllegalArgumentException("IllegalArgumentException");
+        } catch (RuntimeException e) {
+            throw new RuntimeException("RuntimeException");
+        }
 
         /*Stream<Integer> list1 = first.stream();
         Stream<Long> list2 = second.stream();
